USERS/trottar/src/log/20214719TDISMC_EICn.log
In file included from TDISMC_EICn_cpp_ACLiC_dict dictionary payload:8:
././TDISMC_EICn.cpp:16:10: fatal error: 'structure_functions/sf.h' file not found
#include "structure_functions/sf.h"
         ^~~~~~~~~~~~~~~~~~~~~~~~~~
Warning in <TInterpreter::TCling::RegisterModule>: Problems declaring payload for module TDISMC_EICn_cpp_ACLiC_dict.
input_line_14:2:3: error: use of undeclared identifier 'mainx'
 (mainx(0.001, 1., 1., 1000., 20214719, 30000000, 135., 10., true))
  ^
Error in <HandleInterpreterException>: Error evaluating expression (mainx(0.001, 1., 1., 1000., 20214719, 30000000, 135., 10., true)).
Execution of your code was aborted.
